Update how we import images

--- a/src/components/BusinessCard.astro
+++ b/src/components/BusinessCard.astro
@@ -1,7 +1,9 @@
 ---
+import { Image } from 'astro:assets';
+import macbookMemoji from '../assets/memoji-macbook.png';
 ---
 <div class="flex flex-col items-center my-8">
-    <img class="max-w-44" src="/src/assets/memoji-macbook.png" />
+    <Image class="max-w-44" src={macbookMemoji} alt="Memoji of Luigi behind a MacBook"/>
     <!-- <h1 class="text-xl text-center font-bold">Luigi Di Muzio</h1>
     <p class="text-[10px] text-center whitespace-nowrap">iOS Developer | Product Manager | Indie Maker</p> -->
 </div>
