--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,27 +2,7 @@
 import MainLayout from '../layouts/MainLayout.astro';
 ---
 <MainLayout title="About Me">
-  <div class="space-y-8">
-    <!-- <section>
-      <div class="flex">
-
-        <img class="max-w-12" src="/src/assets/memoji-macbook.png" />
-        <div class="flex flex-col items-start">
-        <h1 class="text-xl text-center font-bold">Luigi Di Muzio</h1>
-        <p class="text-[10px] text-center whitespace-nowrap">iOS Developer | Product Manager | Indie Maker</p>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <div class="flex flex-col items-center">
-        <img class="max-w-16" src="/src/assets/memoji-macbook.png" />
-        <h1 class="text-xl text-center font-bold">Luigi Di Muzio</h1>
-        <p class="text-[10px] text-center whitespace-nowrap">iOS Developer | Product Manager | Indie Maker</p>
-      </div>
-    </section> -->
-
-    <div class="flex flex-col">
+    <!-- <div class="flex flex-col">
       <section>
         <div class="flex flex-col items-center">
           <img class="max-w-16" src="/src/assets/memoji-macbook.png" />
@@ -30,16 +10,7 @@ import MainLayout from '../layouts/MainLayout.astro';
           <p class="text-[10px] text-center whitespace-nowrap">iOS Developer | Product Manager | Indie Maker</p>
         </div>
       </section>
-
-      <!-- <section class="space-y-2">
-        <p>You can find me on <a class="underline" href="https://linkedin.com/in/dimuz">LinkedIn</a> </p>
-        <p>Or get in touch at <a class="underline" href="mailme://luigi@dimuz.io">luigi @ dimuz.io</a></p>
-        <p>
-            If you’ve got a project in mind, a role you think I’d be great for, 
-            or just want to say hi, feel free to reach out. I’d love to hear from you.
-        </p>
-      </section> -->
-    </div>
+    </div> -->
 
     <section class="space-y-2">
       <p>You can find me on <a class="underline" href="https://linkedin.com/in/dimuz">LinkedIn</a> </p>
