--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -14,7 +14,7 @@ import MainLayout from '../layouts/MainLayout.astro';
 
     <section class="space-y-2">
       <p>You can find me on <a class="underline" href="https://linkedin.com/in/dimuz">LinkedIn</a> </p>
-      <p>Or get in touch at <a class="underline" href="mailme://luigi@dimuz.io">luigi @ dimuz.io</a></p>
+      <p>Or get in touch at <a class="underline" href="mailto://luigi@dimuz.io">luigi @ dimuz.io</a></p>
       <p>
           If you’ve got a project in mind, a role you think I’d be great for, 
           or just want to say hi, feel free to reach out. I’d love to hear from you.
