--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,30 @@
 ---
 import MainLayout from '../layouts/MainLayout.astro';
-import stickerImage from '@assets/sticker.png';
-import BusinessCard from '../components/BusinessCard.astro';
+import { Image } from 'astro:assets';
+import macbookMemoji from '../assets/memoji-macbook.png';
 ---
 <MainLayout title="Luigi Di Muzio">
 	<div class="space-y-6">
-		<BusinessCard/>
-		<section>	
-			<div class="space-y-1">
-				<h2 class="text-2xl font-bold">Hi, this is Luigi! 👋</h2>
-				<p class="text-xl">I'm an experienced Swift developer and Product Manager specialised in Apple platforms.</p>
+		<section>
+			<div class="flex flex-col items-center mt-8 mb-16">
+				<Image class="max-w-44" src={macbookMemoji} alt="Memoji of Luigi behind a MacBook"/>
+				<h1 class="text-3xl text-center font-bold">Luigi Di Muzio</h1>
+				<p class="text-xl text-center whitespace-nowrap">iOS Developer | Product Manager | Indie Maker</p>
 			</div>
 		</section>
 		<section>
-			<p class="text-m">I’ve spent the last 10 years building apps and working with different teams to make digital products.</p>
-			<p class="text-m">These days, I’m focused on some indie projects and sharing what I learn along the way.</p>
-	</section>
+			<div class="space-y-1">
+				<h2 class="text-xl font-bold">Hello, this is Luigi! 👋</h2>
+				<p class="text-m">
+					I am a Swift Developer and Product Manager specialised in Apple platforms.
+				</p>
+				<p class="text-m">
+					I’ve spent the last 10 years building apps and working with different teams to make digital products.
+				<!-- </p>
+				<p class="text-m"> -->
+					These days, I’m focused on some indie projects and sharing what I learn along the way.
+				</p>
+			</div>
+		</section>
   	</div>
 </MainLayout>
